Fixed footer images and set body font.

--- a/Advisor.html
+++ b/Advisor.html
@@ -4,6 +4,7 @@
 	
 	<head>
 		<link rel="stylesheet" href="AdvisorStylePage.css">
+		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans">
 	</head>
 
 	<body>
@@ -24,11 +25,14 @@
 
 			</div>
 	</div>
-	
+
+
+		<div class="clearfix">
+
+		</div>
 	
 
-			
-			<div class="content">
+		<div class="content">
 				<div id="leftImg">				
 					
 					<img class="banner" src="resources/banner3.jpg">
