--- a/trial/slider.html
+++ b/trial/slider.html
@@ -17,7 +17,9 @@
 
 					<span class="navi" id="prev"></span>
 					<span class="navi" id="next"></span>
-				
+					<span class="autop" id="play"></span>
+					<span class="autop" id="pause"></span>
+					
 			
 		</div>
 
