removed br tags

--- a/Advisor.html
+++ b/Advisor.html
@@ -90,10 +90,10 @@
 					<div id="paraBox">
 						<p class="paraBox">
 							I'm a paragraph
-						<br>If you want to grow your
-						<br>business and take it to the
-						<br>next level,look no further
-						<br>than Advisor & co.
+						If you want to grow your
+						business and take it to the
+						next level,look no further
+						than Advisor & co.
 						</p>
 					
 					
