--- a/Advisor.html
+++ b/Advisor.html
@@ -43,6 +43,7 @@
 						<span class="navi" id="next"></span>
 						<span class="navi" id="play"></span>
 						<span class="navi" id="pause"></span>
+						<span class="navi" id="counter"></span> 
 					
 				  
 				  <div class="Imageslider shadows">
